# llm

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  openapi.json  pyproject.toml  standards.toml
.github/workflows/: ci.yml  deploy.yml  generate-client.yml  publish-client.yml
.husky/: commit-msg  pre-push
client/: package.json  pnpm-lock.yaml  tsconfig.json
client/src/: index.ts
docs/: ARCHITECTURE.md  FEATURES.md
docs/plans/: 00-overview.md  01-project-setup.md  02-litellm-integration.md  03-instructor-integration.md  04-langfuse-observability.md  05-chromadb-rag.md  06-deepeval-testing.md
docs/research/: 01-unified-api.md  02-structured-output.md  03-rag-stack.md  04-observability.md  05-evaluation.md  README.md
infra/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
scripts/: export_openapi.py
src/progression_labs/: __init__.py
src/progression_labs/llm/: __init__.py  completion.py  config.py  metrics.py  observability.py  prompts.py  structured.py
src/progression_labs/llm/eval/: __init__.py  batch.py  cli.py  evaluate.py  metrics.py  pytest_plugin.py
src/progression_labs/llm/rag/: __init__.py  embeddings.py  generate.py  vectorstore.py
src/progression_labs/llm/server/: app.py  models.py  routes.py
tests/: conftest.py
tests/integration/: test_completion_integration.py  test_server_integration.py  test_structured_integration.py
tests/unit/: test_cli.py  test_completion.py  test_config.py  test_eval.py  test_import.py  test_metrics.py  test_observability.py  test_prompts.py  test_rag.py  test_server.py  test_structured.py  test_vectorstore.py
